--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					 </div>
 				</div>
 
-				<div class="left-block-2"> 
+				<div class="left-block-2"> <div class = "clear"> </div>
 					<div class="box-1">
 						<img class="article-img" src="image/m.jpg" alt="food">
 					</div>
